####################################################################################################
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See LICENSE in the project root for license information.
####################################################################################################

add_subdirectory(ir_tests)
add_subdirectory(nest_dialect_test)
