[metadata]
name = accera-llvm
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Accera LLVM Binaries
long_description = file: README.md
long_description_content_type = text/markdown
license_files = ../../../LICENSE
platforms = Linux, Darwin, Windows
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = ~=3.7
zip_safe = False
setup_requires =
    setuptools>=31
    setuptools_scm
package_dir =
    accera.compilers = accera\compilers

[options.package_data]
bin = bin/llc, bin/opt, bin/mlir-translate
