[metadata]
name = accera-llvm
# Versioning schema for accera-llvm: <llvm_major>.<llvm_minor>.<llvm_micro><accera_micro>
# Accera versions are appended to the micro versions to fit within official
# versioning schemes in Python (https://peps.python.org/pep-0440/)
# Accera micro versions are at least 2 digits:
#   LLVM 15.0.7 -> 15.0.700
#   LLVM 15.0.7-1 -> be 15.0.701
# Note that the micro versions must start with a non-zero digit, else setup tools will
# normalize the version by removing the leading zeros
# Note: keep version in sync with Accera/setup.cfg
version = 15.0.101
author = Microsoft Research AI Compilers Team
author_email = mlodev@microsoft.com
summary = Accera LLVM Binaries
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
license_files = ../../../LICENSE
platforms = Linux, Darwin, Windows
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = ~=3.7
zip_safe = False
setup_requires =
    setuptools>=31
package_dir =
    accera.llvm = accera\llvm

[options.package_data]
bin = bin/llc, bin/opt, bin/mlir-translate
